--- a/ui.html
+++ b/ui.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>People CDN Browser</title>
+  <title>Capital Assets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     :root { 
@@ -266,7 +266,7 @@
     init();
 
     function init(){
-      console.log("[INIT] Starting People CDN Browser");
+      console.log("[INIT] Starting Capital Assets");
       populateCategorySelect();
       
       status("Loading photo catalog...");
