New Characters Added

--- a/ui.html
+++ b/ui.html
@@ -232,7 +232,7 @@
   <script>
     // Configuration
     var CDN_BASE = "https://d3a10mptdebtwd.cloudfront.net/";
-    var FOLDERS = ["Diego","Elena","Marcus","Omar","Sophia"];
+    var FOLDERS = ["Diego","Elena","Marcus","Omar","Sophia","James","Hiroshi"];
     function INDEX_URL(name){ return CDN_BASE + name + ".index.json"; }
 
     // State
