--- a/ui.html
+++ b/ui.html
@@ -232,7 +232,7 @@
   <script>
     // Configuration
     var CDN_BASE = "https://d3a10mptdebtwd.cloudfront.net/";
-    var FOLDERS = ["Diego","Elena","Marcus","Omar","Sophia","James","Hiroshi"];
+    var FOLDERS = ["Amir", "Carmen", "David", "Diego", "Elena", "Hiroshi", "Isabella", "James", "Khalid", "Layla", "Li-Chen", "Marcus", "Mei-Lin", "Mike", "Monica", "Omar", "Rafael", "Sarah", "Sophia", "Wei-Ming"];
     function INDEX_URL(name){ return CDN_BASE + name + ".index.json"; }
 
     // State
